--- a/price_compare/look/static/css/products.css
+++ b/price_compare/look/static/css/products.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
 :root{
     --primary-color:  #014C7B;
     --secondary-color: #8F1929;
@@ -17,11 +18,47 @@
     font-family: 'poppins';
 }
 body{
-    width: 100vw;
+    width:100%
 }
+/* nav styling */
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: var(--light-color);
+    padding: 10px 50px;
+    height: 100px;
+    overflow: hidden;
+  }
+  .logo {
+    height: 80px;
+    width: 200px;
+  }
+  .nav-links a {
+    text-decoration: none;
+    font-family: var(--primary-font-family);
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 28px;
+    text-align: right;
+    padding: 0 30px;
+    color: #ccd1d5;
+  }
+  .nav-links a:hover {
+    color: #d9534f;
+  }
+  
+  .navbar-user p{
+    color: #ccd1d5;
+    font-size: 20px;
+  }
+  .user-salute{
+    display: none;
+  }
 /* header starts */
 
-.header-container{
+/* .header-container{
     padding: 0 1.5rem;
 }
 header{
@@ -58,7 +95,6 @@ header a{
 }
 
 .menu, .profile{
-    
     align-items: center;
 }
 
@@ -71,22 +107,29 @@ nav a:active{
 }
 
 /* hamburger */
-.hamburger{
+/* .hamburger{
     display: none;
-}
+} */ */
 
 /* product card begins */
 .product{
-    padding: 0 10vw;
+    padding: 0 5%;
+}
+
+.head-word{
+    font-size: 3rem;
+    text-align: initial;
+    margin: 0 7%;
 }
 .product-container{
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    grid-template-rows: repeat(2,1fr);
-    gap: 10vw;
-    padding: 5vh 0;
-    
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    width: 100%;
+    height: auto;
 }
+
 .card{
     display: flex;
     flex-direction: column;
@@ -94,23 +137,43 @@ nav a:active{
     padding: 0px;
     gap: 20px;        
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);    
-    width: 410px;
-    height: 450px;    
+    width: 35%;
+    height: 45vh;
+    border-radius: 2%;
+    margin: 5%;   
 }
+
 .card img{
-    width: 410px;
+    width: 100%;
     height: 250px;
+    border-radius: 2%;
 }
 .text{padding: 0 1rem;}
+.text h3{
+    margin: 2% 0;
+}
+.text p{
+    font-size: 13px;
+    line-height: 18px;
+}
+.btn_holder{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
+}
 .btn{
     background-color: var(--light-primary);
     color: #fff;
     border-radius: 5px;
-    padding: .8rem 1rem;
+    padding: 0.8rem 1rem;
     border: none;
-    margin-top: 1rem;
-    margin-right: 2rem;
     cursor: pointer;
+    width: 93%;
+    text-align: center;
+    font-size: 18px;
+    text-decoration: none;
 }
 /* directional arrows */
 .direction{
@@ -127,16 +190,16 @@ nav a:active{
     margin-left: 2.5rem;
 }
 
-.hamber{        
+/* .hamber{        
     animation: mine;
     animation-duration: 0.02s;
 }
 .clos{
     animation: mines;
     animation-duration: 0.02s;
-}
+} */
 
-@keyframes mine{
+/* @keyframes mine{
     0% {transform: rotate(15deg);}
     25% {transform: rotate(30deg);}
     50% {transform: rotate(60deg);}
@@ -150,28 +213,131 @@ nav a:active{
     50% {transform: rotate(-60deg);}
     75% {transform: rotate(-75deg);}
     100% {transform: rotate(-90deg);}
-}
+} */
 /* media queries */
 /* mobile */
-@media screen and (max-width: 393px) {
-    .product-container{
-        display: grid;
-        grid-template-columns: repeat(1,1fr);
+@media screen and (max-width: 1255px) {
+    /* nav styling */
+    nav {
+      padding: 10px 20px;
+      height: 80px;
     }
+    .logo {
+      height: 60px;
+      width: 150px;
+    }
+    .nav-links a {
+      font-size: 20px;
+    }
+    .user-salute{
+      display: block;
+    }
+  
+    .user-salute p{
+      color: #ccd1d5;
+      font-size: 16px;
+    }
+  
+    .navbar-user{
+      display: none;
+    }
+}
+/* mobile further styling */
+@media screen and (max-width: 807px) {
+    /* nav bar styling */
+    .logo {
+      height: 40px;
+      width: 100px;
+    }
+    .hamburger-menu {
+      height: 50px;
+      width: 50px;
+      position: relative;
+      cursor: pointer;
+      padding: 1rem;
+      z-index: 2;
+    }
+  
+    .ham-bar {
+      width: 70%;
+      height: 4px;
+      background-color: #001E31;
+      border-radius: 25px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      transition: transform 0.6s, opacity 0.8s, top 0.6s;
+    }
+  
+    .bar-top {
+      top: 25%;
+    }
+    .bar-bottom {
+      top: 75%;
+    }
+    .hamburger-menu.active .bar-top {
+      transform: translate(-50%, -50%) rotate(-315deg);
+      top: 50%;
+    }
+    .hamburger-menu.active .bar-mid {
+      opacity: 0;
+    }
+    .hamburger-menu.active .bar-bottom {
+      transform: translate(-50%, -50%) rotate(-225deg);
+      top: 50%;
+    }
+    #nav-links {
+      position: fixed;
+      top: 0;
+      right: -75%;
+      height: 100vh;
+      width: 55%;
+      transition: right 0.5s;
+      /* background: #000509; */
+      text-align: left;
+      z-index: 2;
+    }
+    #nav-links a {
+      padding: 50px 500px 0 20px;
+    }
+  
+    #nav-links.active {
+      right: 0;
+    }
+    #nav-links a {
+      display: block;
+    }
+}
+
+@media(max-width: 786px){
+
     .product{
-        padding: 0 10vw;
+        padding: 0 2%;
+        padding: 0;
+        margin: 0;
     }
-    .card img{
-        width: 330px;}
+
+    .head-word{
+        font-size: 1.5rem;
+        text-align: initial;
+        margin: 0 10%;
+    }
+
     .card{
-        width: 330px;
-        height: 450px; 
+        width: 80%;
+        height: 55vh;
         margin-bottom: 2rem;   
     }
-    .hamburger .fa-x{
-        display: none;
+
+    .btn{
+        font-size: 14px;
     }
-    .hamburger{
+
+    /* .hamburger .fa-x{
+        /* display: none; */
+    /* } */
+    /* .hamburger{
         color: rgba(128, 128, 128, 0.801);
         display: block;
         display: flex;
@@ -184,11 +350,11 @@ nav a:active{
         display: none; 
         /* display: flex; */
         /* position: relative;*/
-        flex-direction: column; 
+        /* flex-direction: column;  */
         /* flex-wrap: nowrap; */
         
-    }
-    .menu #nav_list a{
+    /* } */ */
+    /* .menu #nav_list a{
         background: none;
         line-height: 2.5;
     }
@@ -206,18 +372,18 @@ nav a:active{
         background: rgba(128, 128, 128, 0.801);
         text-align: left;
         z-index: 2;
-    }
-    .menu{
+    } */
+    /* .menu{
         /* width: 65vw; */
-        justify-content: flex-end;
-    }
+        /* justify-content: flex-end; */
+    /* }
     .logo img{
         width: 70px;
-    }
+    }  */
     .btn{
         padding: .6rem .8rem;
         border: none;
         margin-right: 1rem;
-         
+        font-size: 14px ;
     }
   }
