--- a/price_compare/look/static/css/docs.css
+++ b/price_compare/look/static/css/docs.css
@@ -1,13 +1,689 @@
-*{
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-}
- 
-body {
-    background-color: aquamarine;
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Roboto";
 }
 
-h1 {
-    color: red;
+/* nav styling */
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 50px;
+  height: 100px;
+  overflow: hidden;
+  position: relative;
+}
+.logo {
+  height: 80px;
+  width: 200px;
+}
+.nav-links a {
+  text-decoration: none;
+  font-family: var(--primary-font-family);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 28px;
+  text-align: right;
+  padding: 0 30px;
+  color: #ccd1d5;
+  /* color: #2C3F4E; */
+}
+.nav-links a:hover {
+  color: #d7263d;
+}
+
+/* side bars section styling */
+.left {
+  height: 1659px;
+  width: 23%;
+  position: relative;
+  background: #ccd1d5;
+  border: 1px solid #e0e0e0;
+  padding: 20px 0px 20px 70px;
+}
+
+.top {
+  height: 340px;
+  width: 77%;
+  /* width: 1035px; */
+  background: #56baf9;
+  position: absolute;
+  left: 309px;
+  bottom: 217px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 50px;
+}
+/* left bar content styling */
+.content {
+  margin-bottom: 50px;
+}
+.left a {
+  text-decoration: none;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 23px;
+  color: #02182b;
+  margin: 0 0 0 20px;
+}
+.left a:hover {
+  color: #fff;
+}
+.left p {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 23px;
+  color: rgba(2, 24, 43, 0.63);
+  margin: 30px 45px 0px;
+}
+
+.left a p:hover {
+  color: #d7263d;
+}
+
+/* top bar contents styling */
+.overview h1 {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 60px;
+  line-height: 70px;
+  color: #353535;
+  margin-bottom: 10px;
+}
+.overview p {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 23px;
+  color: #353535;
+  text-align: justify;
+  width: 529px;
+}
+
+.overview-img {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+.overview-img1 {
+  width: 200px;
+  height: 200px;
+  position: absolute;
+  left: -360px;
+  top: -60px;
+}
+.overview-img2 {
+  height: 100px;
+  width: 100px;
+  position: absolute;
+  left: -222px;
+  bottom: 20px;
+}
+.overview-img3 {
+  height: 150px;
+  width: 150px;
+  position: absolute;
+  left: -135px;
+  bottom: -30px;
+}
+
+/* users guild styling */
+.users-guild {
+  position: absolute;
+  left: 400px;
+  bottom: -150px;
+}
+.users-guild h1 {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 39px;
+  color: #000000;
+  margin: 0px 0 30px;
+}
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.content-box {
+  width: 40%;
+  height: 249px;
+  background: #e0e0e0;
+  margin-right: 30px;
+  padding: 100px 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.content-box img {
+  height: 80px;
+  width: 80px;
+}
+.content-box h2 {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  text-align: center;
+  color: #02182b;
+  margin-top: 10px;
+}
+.content-box h3 {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  text-align: center;
+  color: rgba(2, 24, 43, 0.63);
+  width: 200px;
+  margin: 10px 0;
+}
+.content-box a {
+  text-decoration: none;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+  color: #017ecd;
+}
+.content-box a:hover {
+  color: #fff;
+  cursor: pointer;
+}
+
+/* frequently asked questions styling */
+.faq {
+  position: absolute;
+  left: 400px;
+  bottom: -950px;
+  padding: 0 150px 0 0;
+}
+.faq h1 {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 30px;
+  line-height: 36px;
+  color: #02182b;
+  margin-bottom: 20px;
+}
+.faq ul li {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+  color: #02182b;
+  margin-bottom: 20px;
+  list-style-type: square;
+  margin-left: 20px;
+}
+li::marker {
+  color: #8f1929;
+  font-size: 1.5rem;
+  font-weight: bolder;
+}
+.faq ul p {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  color: rgba(2, 24, 43, 0.63);
+}
+
+.herobtn {
+  padding: 10px;
+  width: 30%;
+  height: 49px;
+  background: #fff;
+  border-radius: 8px;
+  border: 2px solid #02182b;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 29px;
+  text-align: center;
+  color: #02182b;
+  margin-right: 20px;
+  margin-top: 20px;
+  transition: 0.5s;
+}
+.herobtn:hover {
+  color: #017ecd;
+  border: 2px solid #017ecd;
+  cursor: pointer;
+}
+.herobtn2 {
+  padding: 10px;
+  width: 30%;
+  height: 49px;
+  background: #017ecd;
+  border-radius: 8px;
+  border: 2px solid #017ecd;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 29px;
+  text-align: center;
+  margin-top: 20px;
+  color: #fff;
+  transition: 0.5s;
+}
+.herobtn2:hover {
+  background-color: transparent;
+  color: #017ecd;
+  cursor: pointer;
+}
+
+/* footer styling */
+footer {
+  width: 100%;
+  height: 281px;
+  background: #001e31;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  position: absolute;
+}
+span {
+  font-size: 20px;
+  line-height: 150%;
+  color: #ccd1d5;
+}
+footer p {
+  font-style: normal;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 150%;
+  text-align: center;
+  color: #606060;
+  width: 28%;
+  margin-top: 30px;
+}
+
+
+
+/*********************************************************
+Responsiveness for Tablets and Mobile Screen Views
+**********************************************************/
+@media screen and (max-width: 1280px) {
+  /* side bars section styling */
+  .top {
+    left: 292px;
+    bottom: 360px;
+  }
+
+  /* users guild styling */
+  .users-guild {
+    bottom: -10px;
+  }
+  /* frequently asked questions styling */
+  .faq {
+    bottom: -800px;
+  }
+}
+@media screen and (max-width: 1024px) {
+  /* side bars section styling */
+  .top {
+    left: 235px;
+    bottom: 160px;
+  }
+  /* top bar contents styling */
+  .overview p {
+    font-size: 18px;
+    line-height: 20px;
+    width: 320px;
+  }
+
+  /* users guild styling */
+  .users-guild {
+    bottom: -250px;
+    left: 260px;
+  }
+  .content-box {
+    width: 30%;
+    margin-right: 15px;
+  }
+  .content-box img {
+    height: 50px;
+    width: 50px;
+  }
+  /* frequently asked questions styling */
+  .faq {
+    bottom: -1050px;
+    left: 280px;
+  }
+}
+
+@media screen and (max-width: 912px) {
+  /* side bars section styling */
+  /* nav styling */
+  .logo {
+    height: 60px;
+    width: 150px;
+  }
+  .nav-links a {
+    font-size: 20px;
+    line-height: 24px;
+    padding: 0 25px;
+  }
+  .left {
+    height: 1800px;
+    width: 26%;
+  }
+  .top {
+    left: 235px;
+    bottom: 930px;
+    width: 74%;
+  }
+  /* top bar contents styling */
+  .overview p {
+    width: 290px;
+  }
+  .overview-img1 {
+    width: 150px;
+    height: 150px;
+    left: -300px;
+    top: -30px;
+  }
+  /* users guild styling */
+  .users-guild {
+    bottom: 40%;
+    left: 280px;
+  }
+  .content-box {
+    width: 30%;
+    margin-right: 15px;
+  }
+  .content-box img {
+    height: 50px;
+    width: 50px;
+  }
+  .content-box h3 {
+    font-size: 18px;
+    line-height: 20px;
+    width: 150px;
+  }
+  /* frequently asked questions styling */
+  .faq {
+    top: 65%;
+    left: 280px;
+  }
+}
+@media screen and (max-width: 820px) {
+  /* side bars section styling */
+  .left {
+    height: 1800px;
+    width: 28.8%;
+  }
+  .top {
+    left: 235px;
+    bottom: 740px;
+    width: 71%;
+  }
+  /* top bar contents styling */
+  .overview p {
+    width: 250px;
+    font-size: 16px;
+    line-height: 17px;
+  }
+  .overview-img1 {
+    width: 120px;
+    height: 120px;
+    left: -250px;
+    top: -30px;
+  }
+  .overview-img2 {
+    width: 80px;
+    height: 80px;
+    left: -190px;
+    bottom: 20px;
+  }
+  .overview-img3 {
+    width: 120px;
+    height: 120px;
+    left: -120px;
+    bottom: -30px;
+  }
+  /* users guild styling */
+  .users-guild {
+    bottom: 30%;
+    left: 260px;
+  }
+  .content-box {
+    width: 30%;
+    margin-right: 5px;
+    padding: 50px 10px;
+  }
+  .content-box h3 {
+    font-size: 16px;
+    line-height: 17px;
+  }
+  /* frequently asked questions styling */
+  .faq {
+    top: 75%;
+    left: 260px;
+  }
+  .herobtn {
+    padding: 5px;
+    width: 40%;
+    border-radius: 5px;
+    font-size: 18px;
+    line-height: 20px;
+    margin-right: 15px;
+    margin-top: 20px;
+    margin-bottom: 30px;
+    transition: 0.5s;
+  }
+  .herobtn2 {
+    padding: 5px;
+    width: 40%;
+    background: #017ecd;
+    border-radius: 5px;
+    font-size: 18px;
+    line-height: 20px;
+    margin-bottom: 30px;
+    margin-top: 20px;
+  }
+}
+
+@media screen and (max-width: 799px) {
+  /* nav bar styling */
+  .logo {
+    height: 40px;
+    width: 100px;
+  }
+  .hamburger-menu {
+    height: 50px;
+    width: 50px;
+    position: relative;
+    cursor: pointer;
+    padding: 1rem;
+    z-index: 2;
+  }
+
+  .ham-bar {
+    width: 70%;
+    height: 4px;
+    background-color: #001e31;
+    border-radius: 25px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transition: transform 0.6s, opacity 0.8s, top 0.6s;
+  }
+
+  .bar-top {
+    top: 25%;
+  }
+  .bar-bottom {
+    top: 75%;
+  }
+  .hamburger-menu.active .bar-top {
+    transform: translate(-50%, -50%) rotate(-315deg);
+    top: 50%;
+  }
+  .hamburger-menu.active .bar-mid {
+    opacity: 0;
+  }
+  .hamburger-menu.active .bar-bottom {
+    transform: translate(-50%, -50%) rotate(-225deg);
+    top: 50%;
+  }
+  #nav-links {
+    position: fixed;
+    top: 0;
+    right: -75%;
+    height: 100vh;
+    width: 55%;
+    transition: right 0.5s;
+    background: #fff;
+    text-align: left;
+    z-index: 2;
+  }
+  #nav-links a {
+    padding: 50px 500px 0 20px;
+    color: #000509;
+  }
+
+  #nav-links.active {
+    right: 0;
+  }
+  #nav-links a {
+    display: block;
+  }
+
+  /* Bars styling */
+  .left {
+    display: none;
+  }
+  .top {
+    position: relative;
+    left: 0px;
+    bottom: 0px;
+    width: 100%;
+    height: 200px;
+    padding: 15px;
+  }
+  /* top bar contents styling */
+  .overview p {
+    width: 62%;
+    font-size: 12px;
+    line-height: 12px;
+  }
+  .overview h1 {
+    font-size: 35px;
+    line-height: 15px;
+    margin-bottom: 15px;
+  }
+  .overview-img1 {
+    width: 60px;
+    height: 60px;
+    left: -120px;
+    top: -10px;
+  }
+  .overview-img2 {
+    width: 30px;
+    height: 30px;
+    left: -80px;
+    bottom: 3px;
+  }
+  .overview-img3 {
+    width: 60px;
+    height: 60px;
+    left: -50px;
+    bottom: -20px;
+  }
+  /* users guild styling */
+  .users-guild {
+    position: relative;
+    bottom: 00%;
+    left: 0px;
+    margin: 0 20px;
+  }
+  .content-box h3 {
+    font-size: 16px;
+    line-height: 19px;
+  }
+  .content-box h2 {
+    font-size: 16px;
+    line-height: 19px;
+  }
+  .users-guild h1 {
+    font-size: 14px;
+    line-height: 17px;
+    margin: 20px 0 0;
+  }
+  .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .content-box {
+    width: 100%;
+    height: 249px;
+    margin: 10px 0px;
+    padding: 30px;
+  }
+  .content-box img {
+    height: 80px;
+    width: 80px;
+  }
+  /* frequently asked questions styling */
+  .faq {
+    position: relative;
+    left: 0px;
+    bottom: 0px;
+    padding: 0;
+    margin: 0 30px;
+  }
+
+  .faq h1 {
+    font-size: 20px;
+    line-height: 24px;
+    width: 300px;
+  }
+  .faq ul li {
+    font-size: 14px;
+    line-height: 17px;
+    width: 100%;
+  }
+
+  .faq ul p {
+    font-size: 14px;
+    line-height: 17px;
+  }
+
+  /* footer styling */
+  footer {
+    height: 100px;
+  }
+  footer .nav-links a {
+    font-weight: 300;
+    font-size: 8px;
+    line-height: 150%;
+    padding: 0 10px;
+  }
+  span {
+    font-weight: 300;
+    font-size: 8px;
+    line-height: 150%;
+  }
+  footer p {
+    font-weight: 400;
+    font-size: 6px;
+    line-height: 150%;
+    width: 40%;
+  }
 }
