--- a/price_compare/look/templates/pages/signup.html
+++ b/price_compare/look/templates/pages/signup.html
@@ -20,6 +20,10 @@
                         {{form.first_name}}
                     </div>
                     <div class="inputBx">
+                        {{form.last_name.label}}
+                        {{form.last_name}}
+                    </div>
+                    <div class="inputBx">
                         {{form.email.label}}
                         {{form.email}}
                     </div>
