--- a/price_compare/look/static/css/product_details.css
+++ b/price_compare/look/static/css/product_details.css
@@ -1,13 +1,270 @@
+/* :root{
+    --primary-color:  #014C7B;
+    --secondary-color: #8F1929;
+    --tertiary-color: #2C3F4E;
+    --dark-color:#002240;
+    --light-primary: #56BAF9;
+    --light-color: #f4f4f4;
+    --success-color: #5cb85c;
+    --error-color: #d9534f;
+}
+
 *{
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    background-color: #F7F7F7;
+    font-family: 'poppins';
 }
- 
-body {
-    background-color: aquamarine;
+body{
+    width:100%
+}
+/* nav styling */
+/* nav {
+    display: flex;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    background-color: var(--light-color);
+    padding: 10px 50px;
+    height: 100px;
+    overflow: hidden;
+    border-bottom: 1px solid;
+  }
+  .logo {
+    height: 80px;
+    width: 200px;
+  }
+  .nav-links a {
+    text-decoration: none;
+    font-family: var(--primary-font-family);
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 28px;
+    text-align: right;
+    padding: 0 30px;
+    color: #ccd1d5;
+  }
+  .nav-links a:hover {
+    color: #d9534f;
+  }
+  
+  .navbar-user p{
+    color: #ccd1d5;
+    font-size: 20px;
+  }
+  .user-salute{
+    display: none;
+  }
+
+/* sectioning of page */
+/* .d_holder{
+  margin-top: 6rem;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  background-color: #56BAF9;
+  padding: 0px 5%;
 }
 
-h1 {
-    color: red;
+.price_d_holder{
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+  align-items: center;
+  width: 35%;
+  /* height: 90vh; */
+  /* background-color: #ccd1d5;
 }
+
+.comment_d_holder{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+    
+  align-items: flex-end;
+  width: 65%;
+  /* height: 90vh; */
+  /* background-color: #f4f4f4;
+} */
+
+
+/* right hand part comments
+.product_name{
+  text-align: start;
+  width: 85%;
+  margin: 2rem 0;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 34px;
+  line-height: 40px;
+}
+
+.image_carrier{
+  width: 85%;
+} */
+/* 
+.product_image{
+  width: 100%;
+  height: 50vh;
+}
+
+.comment_head{
+  text-align: start;
+  width: 85%;
+  font-size: 1.4rem;
+  margin: 1% 0%;
+} */
+
+/* .div_one {
+  /* background-color: antiquewhite; */
+  /* width: 85%;
+  height: 50vh;
+  /* border: 1px solid blueviolet; */
+  /* overflow: scroll;
+  padding: 0.6rem;
+}
+
+.span_card{  */
+  /* border-bottom: 1px solid rgb(28, 30, 32);
+  margin-bottom: 1rem;
+  border-style: solid;
+  display: block;
+  /* border-radius: 10px; */
+  /* padding: 9px;
+  height: 11vh; 
+  
+}  */
+
+/* .section_card {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  height: 12vh;
+  margin-bottom: 2rem;
+  width: 85%;
+}
+   */
+
+  /* price-source */
+/* .price_card{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    padding: 16px;
+    width: 305px;
+    height: 184px;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 16px;
+} */
+
+
+
+
+  /* media queries */
+/* mobile */
+/* @media screen and (max-width: 1255px) { */
+    /* nav styling */
+    /* nav {
+      padding: 10px 20px;
+      height: 80px;
+    }
+    .logo {
+      height: 60px;
+      width: 150px;
+    }
+    .nav-links a {
+      font-size: 20px;
+    }
+    .user-salute{
+      display: block;
+    }
+  
+    .user-salute p{
+      color: #ccd1d5;
+      font-size: 16px;
+    }
+  
+    .navbar-user{
+      display: none;
+    }
+} */
+/* mobile further styling */
+/* @media screen and (max-width: 807px) {
+    /* nav bar styling */
+    /* .logo { */
+      /* height: 40px;
+      width: 100px;
+    }
+    .hamburger-menu {
+      height: 50px;
+      width: 50px;
+      position: relative;
+      cursor: pointer;
+      padding: 1rem;
+      z-index: 2; */
+    /* }
+  
+    .ham-bar {
+      width: 70%;
+      height: 4px;
+      background-color: #001E31;
+      border-radius: 25px;
+      position: absolute;
+      top: 50%;
+      left: 50%; */ 
+      /* transform: translate(-50%, -50%);
+      transition: transform 0.6s, opacity 0.8s, top 0.6s;
+    }
+  
+    .bar-top {
+      top: 25%;
+    }
+    .bar-bottom {
+      top: 75%;
+    }
+    .hamburger-menu.active .bar-top {
+      transform: translate(-50%, -50%) rotate(-315deg);
+      top: 50%;
+    }
+    .hamburger-menu.active .bar-mid {
+      opacity: 0;
+    }
+    .hamburger-menu.active .bar-bottom {
+      transform: translate(-50%, -50%) rotate(-225deg);
+      top: 50%;
+    }
+    #nav-links {
+      position: fixed;
+      top: 0;
+      right: -75%;
+      height: 100vh;
+      width: 55%;
+      transition: right 0.5s;
+      /* background: #000509; */
+      /* text-align: left;
+      z-index: 2;
+    }
+    #nav-links a {
+      padding: 50px 500px 0 20px;
+    }
+  
+    #nav-links.active {
+      right: 0;
+    }
+    #nav-links a {
+      display: block;
+    } */
+/* }  */
