--- a/price_compare/look/static/css/product_details.css
+++ b/price_compare/look/static/css/product_details.css
@@ -1,4 +1,4 @@
-/* :root{
+:root{
     --primary-color:  #014C7B;
     --secondary-color: #8F1929;
     --tertiary-color: #2C3F4E;
@@ -20,7 +20,7 @@ body{
     width:100%
 }
 /* nav styling */
-/* nav {
+nav {
     display: flex;
     position: fixed;
     top: 0;
@@ -61,7 +61,7 @@ body{
   }
 
 /* sectioning of page */
-/* .d_holder{
+.d_holder{
   margin-top: 6rem;
   display: flex;
   flex-direction: row;
@@ -77,7 +77,7 @@ body{
   align-items: center;
   width: 35%;
   /* height: 90vh; */
-  /* background-color: #ccd1d5;
+  background-color: #ccd1d5;
 }
 
 .comment_d_holder{
@@ -88,11 +88,11 @@ body{
   align-items: flex-end;
   width: 65%;
   /* height: 90vh; */
-  /* background-color: #f4f4f4;
-} */
+  background-color: #f4f4f4;
+}
 
 
-/* right hand part comments
+/* right hand part comments */
 .product_name{
   text-align: start;
   width: 85%;
@@ -106,8 +106,8 @@ body{
 
 .image_carrier{
   width: 85%;
-} */
-/* 
+}
+
 .product_image{
   width: 100%;
   height: 50vh;
@@ -118,29 +118,29 @@ body{
   width: 85%;
   font-size: 1.4rem;
   margin: 1% 0%;
-} */
+}
 
-/* .div_one {
+.div_one {
   /* background-color: antiquewhite; */
-  /* width: 85%;
+  width: 85%;
   height: 50vh;
-  /* border: 1px solid blueviolet; */
-  /* overflow: scroll;
+  border: 1px solid blueviolet;
+  overflow: scroll;
   padding: 0.6rem;
 }
 
-.span_card{  */
-  /* border-bottom: 1px solid rgb(28, 30, 32);
+.span_card{
+  border-bottom: 1px solid rgb(28, 30, 32);
   margin-bottom: 1rem;
   border-style: solid;
   display: block;
   /* border-radius: 10px; */
-  /* padding: 9px;
-  height: 11vh; 
+  padding: 9px;
+  height: 11vh;
   
-}  */
+}
 
-/* .section_card {
+.section_card {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -155,10 +155,10 @@ form {
   margin-bottom: 2rem;
   width: 85%;
 }
-   */
+  
 
   /* price-source */
-/* .price_card{
+.price_card{
     display: flex;
     flex-direction: row;
     align-items: flex-start;
@@ -168,16 +168,16 @@ form {
     background: #FFFFFF;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 16px;
-} */
+}
 
 
 
 
   /* media queries */
 /* mobile */
-/* @media screen and (max-width: 1255px) { */
+@media screen and (max-width: 1255px) {
     /* nav styling */
-    /* nav {
+    nav {
       padding: 10px 20px;
       height: 80px;
     }
@@ -200,12 +200,12 @@ form {
     .navbar-user{
       display: none;
     }
-} */
+}
 /* mobile further styling */
-/* @media screen and (max-width: 807px) {
+@media screen and (max-width: 807px) {
     /* nav bar styling */
-    /* .logo { */
-      /* height: 40px;
+    .logo {
+      height: 40px;
       width: 100px;
     }
     .hamburger-menu {
@@ -214,8 +214,8 @@ form {
       position: relative;
       cursor: pointer;
       padding: 1rem;
-      z-index: 2; */
-    /* }
+      z-index: 2;
+    }
   
     .ham-bar {
       width: 70%;
@@ -224,8 +224,8 @@ form {
       border-radius: 25px;
       position: absolute;
       top: 50%;
-      left: 50%; */ 
-      /* transform: translate(-50%, -50%);
+      left: 50%;
+      transform: translate(-50%, -50%);
       transition: transform 0.6s, opacity 0.8s, top 0.6s;
     }
   
@@ -254,7 +254,7 @@ form {
       width: 55%;
       transition: right 0.5s;
       /* background: #000509; */
-      /* text-align: left;
+      text-align: left;
       z-index: 2;
     }
     #nav-links a {
@@ -266,5 +266,5 @@ form {
     }
     #nav-links a {
       display: block;
-    } */
-/* }  */
+    }
+}
