--- a/price_compare/look/templates/pages/products.html
+++ b/price_compare/look/templates/pages/products.html
@@ -60,7 +60,7 @@
                             <p>{{product.description}}</p>
                         </div>
                         <div class="btn_holder">
-                            <a href={% url "productDetail" product.id user.id %} class="btn">
+                            <a href={% url "productDetail" product.id %} class="btn">
                                 view details
                         </a> 
                         </div>
