--- a/price_compare/look/static/css/product_details.css
+++ b/price_compare/look/static/css/product_details.css
@@ -335,7 +335,7 @@ form textarea::placeholder{
   
     .user-salute p{
       color: #ccd1d5;
-      font-size: 16px;
+      font-size: 1rem;
     }
   
     .navbar-user{
@@ -408,6 +408,10 @@ form textarea::placeholder{
     #nav-links a {
       display: block;
     }
+     
+    /* .user-salute p{
+      font-size: 13px;
+    } */
 
     /* d-Holder of detail  */
 
