--- a/price_compare/look/static/css/products.css
+++ b/price_compare/look/static/css/products.css
@@ -166,7 +166,7 @@ nav {
   
     .user-salute p{
       color: #ccd1d5;
-      font-size: 16px;
+      font-size: 1rem;
     }
   
     .navbar-user{
@@ -238,6 +238,9 @@ nav {
     #nav-links a {
       display: block;
     }
+    /* .user-salute p{
+      font-size: 13px;
+    } */
 }
 
 @media(max-width: 786px){
